# prollypy

./: .gitignore  Cargo.toml  README.md  RUST_PORT.md  pyproject.toml  pyrightconfig.json
.github/workflows/: benchmark.yml  rust-test.yml  test.yml
docs/: PERFORMANCE.md
go-prolly/: go.mod  go.sum
go-prolly/cmd/prolly-cli/: main.go  sqlite_store.go
go-prolly/prolly-core/: commit_graph_store.go  cursor.go  db.go  diff.go  hash.go  node.go  repo.go  sqlite_commit_store.go  store.go  store_gc.go  tree.go
prolly-cli/: Cargo.toml
prolly-cli/src/: main.rs  s3_store.rs  sqlite_commit_store.rs  sqlite_import.rs
prolly-core/: Cargo.toml
prolly-core/benches/: tree_bench.rs
prolly-core/src/: commit_graph_store.rs  cursor.rs  db.rs  diff.rs  error.rs  lib.rs  node.rs  repo.rs  stats.rs  store.rs  store_gc.rs  tree.rs
prollypy/: __init__.py  cli.py  commit_graph_store.py  commonality.py  cursor.py  db.py  db_diff.py  diff.py  mutator.py  node.py  repo.py  sqlite_import.py  stats.py  store.py  store_gc.py  tree.py
prollypy/store/: __init__.py  filesystem.py  memory.py  protocols.py  s3.py
scripts/: README.md  benchmark.py  benchmark_python_rust.py  split_tables.py  test_split.py
tests/: __init__.py  test_cli.py  test_commonality.py  test_cursor.py  test_db.py  test_diff.py  test_gc.py  test_insertion_order_independence.py  test_repo.py  test_sqlite_import.py  test_tree.py
