[project]
name = "prollytree-prototype"
version = "0.1.0"
description = "Python prototype of ProllyTree with pluggable storage backends"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }

dependencies = [
    "tqdm>=4.0.0",
    "boto3>=1.26.0",
]

[project.scripts]
prolly = "prollypy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prollypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
