[package]
name = "prolly-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "prolly"
path = "src/main.rs"

[dependencies]
prolly-core = { path = "../prolly-core" }
clap.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
serde_json.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3.10"
