[package]
name = "prolly-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "prolly"
path = "src/main.rs"

[dependencies]
prolly-core = { path = "../prolly-core" }
clap.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
serde_json.workspace = true
hex.workspace = true
chrono.workspace = true
tokio.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
toml.workspace = true
crossbeam.workspace = true
num_cpus.workspace = true
serde.workspace = true
bincode = "1.3"

[dev-dependencies]
tempfile = "3.10"
